# pyTMD

./: .gitignore  .zenodo.json  CITATION.cff  MANIFEST.in  README.md  README.rst  codecov.yml  environment.yml  pyproject.toml  readthedocs.yml
.github/workflows/: cff-validator.yml  check-notebooks.yml  joss-draft-pdf.yml  linter_actions.yml  python-publish.yml  python-request.yml  ruff-format.yml  sphinx-build.yml  update-provider-database.yml
doc/: environment.yml
doc/source/: conf.py  constituent_table.py  index.rst  model_table.py  write_bibtex.py
doc/source/_assets/: paper.md  pytmd-refs.bib
doc/source/_static/: style.css
doc/source/api_reference/: API-Reference.rst  arguments.rst  astro.rst  compute.rst  constituents.rst  earth.rst  ellipse.rst  gsfc_got_tides.rst  interpolate.rst  math.rst  predict.rst  spatial.rst  utilities.rst
doc/source/background/: Approximate-Methods.rst  Astronomy.rst  Background.rst  Constituent-Table.rst  Glossary.rst  Gravity-Tides.rst  Harmonic-Analysis.rst  JPL-Ephemerides.rst  Love-Numbers.rst  Ocean-Load-Tides.rst  Pole-Tides.rst  Reference-Systems.rst  Solid-Earth-Tides.rst  Spherical-Harmonics.rst  Tidal-Constituents.rst  Tide-Catalog-Table.rst  Tides.rst  Time.rst  deltatime.py  geocentric-cartesian.py  geocentric-latitude.py  length-of-day.py  love-numbers.py  lunar-nodal-cycle.py  mean-longitudes.py  nutation-angles.py  obliquity-ecliptic.py  polar-motion.py  precession-nutation.py  sidereal-time.py  spectra.py  sphharm.py  sphharm34.py  tidal-factors.py  zenith-angles.py
doc/source/getting_started/: AVISO-Registration.rst  Code-of-Conduct.rst  Compute-Tides.ipynb  Contributing.rst  Current-Table.rst  Getting-Started.rst  Install.ipynb  Install.rst  Model-Database.ipynb  Resources.rst  Tide-Corrections.rst  Verify-Install.ipynb
doc/source/notebooks/: Check-Tide-Map.ipynb  Compare-NOAA-Tides.ipynb  Compare-Tide-Gauges.ipynb  Extrapolation.ipynb  (+16 more)
providers/: AVISO.json  ESR.json  GSFC.json  INATIDES.json  TPXO.json  _model_to_database.py  _providers_to_database.py  _restructure_providers.py  _update_providers.py  providers.json
pyTMD/: __init__.py  arguments.py  astro.py  compute.py  constituents.py  crs.py  earth.py  ellipse.py  interpolate.py  math.py  predict.py  spatial.py  tools.py  utilities.py
pyTMD/data/: cte1973_tab.txt  database.json  hw1995_tab.txt  t1987_tab.txt  w1990_tab1.txt  w1990_tab2.txt
pyTMD/datasets/: __init__.py  fetch_arcticdata.py  fetch_aviso_fes.py  fetch_box_tpxo.py  fetch_database.py  fetch_gsfc_got.py  fetch_iers_opole.py  fetch_jpl_ssd.py  fetch_test_data.py  reduce_otis.py  verify_box_tpxo.py
pyTMD/io/: ATLAS.py  FES.py  GOT.py  IERS.py  NOAA.py  OTIS.py  __init__.py  constituents.py  dataset.py  model.py
pyTMD/predict/: __init__.py  earth_orientation.py  gravity_tide.py  ocean_load.py  ocean_load_tide.py  polar_motion.py  potential.py  solid_earth.py  solid_earth_tide.py
pyTMD/scripts/: reduce_OTIS_files.py
pyTMD/solve/: __init__.py  constants.py  forward.py  grid.py  model.py  response.py
pyTMD/xio/: ATLAS.py  FES.py  GOT.py  IERS.py  Model.py  OTIS.py  __init__.py
test/: _coefficients_to_json.py  _restructure_json.py  conftest.py  extra_database.json  model_CATS2008.json  model_FES2012.json  model_FES2014.json  model_FES2022b_extrapolated.json  model_GOT4.10.json  model_GOT5.5D.json  model_GOT5.6.json  model_GOT5.6_load.json  model_HAMTIDE12x.json  model_TPXO9-atlas-v5.json  oceanloadpole.test  test_arguments.py  test_astro.py  test_atlas_read.py  test_constituents.py  test_coordinates.py  test_download_and_read.py  test_ellipse.py  test_equilibrium_tide.py  test_fes_predict.py  test_interpolate.py  test_love_numbers.py  test_math.py  test_model.py  test_noaa_queries.py  test_otis_read.py  test_perth3_read.py  test_perth5_predict.py  test_pole_tide.py  test_potential.py  test_solid_earth.py  test_solve.py  test_spatial.py  test_triangle.py  test_utilities.py
(+127 files in other folders)
