[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pyTMD"
description = "Python-based tidal prediction software for estimating ocean, load, solid Earth and pole tides"
keywords = [
    "Ocean Tides",
    "Load Tides",
    "Pole Tides",
    "Solid Earth Tides",
    "Tidal Prediction",
]
authors = [
    {name = "Tyler Sutterley"},
    {email = "tsutterl@uw.edu"}
]
maintainers = [
    {name = "pyTMD contributors"}
]
license = {file = "LICENSE"}
readme = "README.rst"

requires-python = "~=3.6"
dependencies = [
    "lxml",
    "netCDF4",
    "numpy",
    "pyproj",
    "python-dateutil",
    "scipy>=1.10.1",
    "setuptools_scm",
    "timescale>=0.0.8",
]

dynamic = ["version"]

classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Oceanography",
]

[project.urls]
Homepage = "https://pytmd.readthedocs.io"
Documentation = "https://pytmd.readthedocs.io"
Repository = "https://github.com/pyTMD/pyTMD"
Issues = "https://github.com/pyTMD/pyTMD/issues"

[project.optional-dependencies]
doc = ["docutils", "fontconfig", "freetype", "graphviz", "myst-nb", "numpydoc", "sphinx", "sphinx-argparse>=0.4", "sphinxcontrib-bibtex", "sphinx-design", "sphinx_rtd_theme"]
all = ["cartopy", "ipyleaflet", "ipywidgets", "jplephem", "matplotlib", "notebook", "pandas"]
dev = ["flake8", "pytest>=4.6", "pytest-cov", "oct2py", "boto3"]

[tool.setuptools.packages.find]
exclude = ["providers*", "run*", "test*"]

[tool.pytest.ini_options]
minversion = "6.0"
norecursedirs = ".git"
python_files = [
    "test*.py"
]
testpaths = [
    "test"
]

[tool.coverage.run]
branch = true
source = [
    "pyTMD",
    "test",
]
omit = [
    "setup.py",
    "conf.py",
    "scripts/*",
    "pyTMD/compute_tide_corrections.py",
    "test/_coefficients_to_json.py",
    "test/_def_to_json.py",
    "providers/*.py",
]

[tool.coverage.report]
show_missing = true
precision = 2

[tool.ruff]
line-length = 80

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "win-64"]

[tool.pixi.pypi-dependencies]
pyTMD = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
all = { features = ["all"], solve-group = "default" }
dev = { features = ["all", "dev", "doc"], solve-group = "default" }
doc = { features = ["doc"], solve-group = "default" }

[tool.pixi.tasks]

[tool.pixi.dependencies]
numpy = ">=2.3.2,<3"
netcdf4 = ">=1.7.2,<2"
lxml = ">=6.0.0,<7"
pyproj = ">=3.7.1,<4"
python-dateutil = ">=2.9.0.post0,<3"
scipy = ">=1.16.0,<2"
timescale = ">=0.0.9,<0.0.10"

[tool.pixi.feature.all.dependencies]
cartopy = ">=0.25.0,<0.26"
matplotlib = ">=3.10.5,<4"
ipyleaflet = ">=0.20.0,<0.21"
ipywidgets = ">=8.1.7,<9"
jplephem = ">=2.23,<3"
pandas = ">=2.3.1,<3"
notebook = ">=7.4.4,<8"

[tool.pixi.feature.dev.dependencies]
flake8 = ">=7.3.0,<8"
pytest = ">=8.4.1,<9"
pytest-cov = ">=6.2.1,<7"
boto3 = ">=1.40.1,<2"
oct2py = ">=5.8.0,<6"

[tool.pixi.feature.doc.dependencies]
docutils = ">=0.21.2,<0.22"
graphviz = ">=13.1.1,<14"
myst-nb = ">=1.3.0,<2"
numpydoc = ">=1.9.0,<2"
sphinx = ">=8.2.3,<9"
sphinx-argparse = ">=0.5.2,<0.6"
sphinxcontrib-bibtex = ">=2.6.5,<3"
sphinx-design = ">=0.6.1,<0.7"
sphinx_rtd_theme = ">=3.0.1,<4"
